objects/tffa__AssetTransaction__c.object
<CustomObject>
    <description>Captures the transaction details of the asset.</description>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Amount of the transaction</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to parent asset object</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Description of the transaction</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LenderName__c</fullName>
        <description>Name of the lender</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lender name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LenderType__c</fullName>
        <description>Type of the lender</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lender type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LoanAmount__c</fullName>
        <description>Involved Loan amount if any</description>
        <label>Loan amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__LoanInterestRate__c</fullName>
        <description>Involved Loan rate if any</description>
        <label>Loan interest rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__LoanType__c</fullName>
        <description>Involved Loan type if any</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates the transaction type for the asset</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AssetTransactionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ValueDate__c</fullName>
        <description>The transaction date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value date</label>
        <type>Date</type>
    </fields>
    <label>Asset Transaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>